maquetacion y estilo del login

--- a/index.html
+++ b/index.html
@@ -3,14 +3,54 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/javascript.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;600;700&display=swap" rel="stylesheet">
   <title>Iniciar Sesion</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/form.css">
+  <link rel="stylesheet" href="css/button.css">
 </head>
 
 <body>
-  <div id="app">HOLA MUNDO</div>
+  <div class="app">
+    <div class="sectionLogin app__container--Img">
+      <img src="img/logo.png" alt="logo casas">
+    </div>
+    <div class="sectionLogin app__container--form">
+      <div class="app__buttonBack--container">
+        <i class="fa-solid fa-chevron-left app__buttonBack__symbol"></i>
+        <a href="" class="app__link--back">ATRAS</a>
+      </div>
+      <div class="app__container--title">
+        <h1 class="app__title">INICIAR SESION</h1>
+        <span class="app__subtitle">Si ya es miembro, puede iniciar sesión con su dirección de correo electrónico y
+          contraseña.</span>
+      </div>
+      <form action="" class="app__form">
+        <div class="app__form__sectionEmail">
+          <span class="app__form__sectionEmail__title">Correo</span>
+          <input type="text" placeholder="CORREO ELECTRONICO">
+        </div>
+        <div class="app__form__sectionPassword">
+          <span class="app__form__sectionPassword__title">Contraseña</span>
+          <input type="password" placeholder="CONTRASEÑA">
+        </div>
+        <div class="app__form__sectionCheckbox">
+          <input type="checkbox">
+          <span class="app__form__sectionCheckbox__title">Recordar datos</span>
+        </div>
+        <button class="app__form__button">Iniciar sesion</button>
+      </form>
+      <a target="_blank" href="https://www.google.com" class="app__link--Register">¿No tienes una cuenta?
+        ¡Registrate Aquí!</a>
+    </div>
+  </div>
   <script type="module" src="/main.js"></script>
+  <script src="https://kit.fontawesome.com/5ad8ae8b3e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
