creacion de la pantalla de registro, creacion de logica para manejar los inputs, edicion en la ui y cambio de logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;600;700&display=swap" rel="stylesheet">
   <title>Iniciar Sesion</title>
+  <!-- estilos -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/form.css">
   <link rel="stylesheet" href="css/button.css">
@@ -18,7 +19,7 @@
 <body>
   <div class="app">
     <div class="sectionLogin app__container--Img">
-      <img src="img/logo.png" alt="logo casas">
+      <img src="img/logo-transparent.png" alt="logo casas">
     </div>
     <div class="sectionLogin app__container--form">
       <div class="app__buttonBack--container">
@@ -31,25 +32,25 @@
           contraseña.</span>
       </div>
       <form action="" class="app__form">
-        <div class="app__form__sectionEmail">
-          <span class="app__form__sectionEmail__title">Correo</span>
-          <input type="text" placeholder="CORREO ELECTRONICO">
+        <div class="app__form__sectionText">
+          <span class="app__form__sectionText__title">Correo</span>
+          <input type="text" placeholder="CORREO ELECTRONICO" id="login--Email">
         </div>
         <div class="app__form__sectionPassword">
           <span class="app__form__sectionPassword__title">Contraseña</span>
-          <input type="password" placeholder="CONTRASEÑA">
+          <input type="password" placeholder="CONTRASEÑA" id="login--Password">
         </div>
         <div class="app__form__sectionCheckbox">
           <input type="checkbox">
           <span class="app__form__sectionCheckbox__title">Recordar datos</span>
         </div>
-        <button class="app__form__button">Iniciar sesion</button>
+        <button class="app__form__button" id="button--login">Iniciar sesion</button>
       </form>
-      <a target="_blank" href="https://www.google.com" class="app__link--Register">¿No tienes una cuenta?
+      <a target="_blank" href="registrar.html" class="app__link--Register">¿No tienes una cuenta?
         ¡Registrate Aquí!</a>
     </div>
   </div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="js/manageLogIn.js"></script>
   <script src="https://kit.fontawesome.com/5ad8ae8b3e.js" crossorigin="anonymous"></script>
 </body>
 
